Added Type Mpping for Templates
Added Type Mapping:
Single Template
Multi Templates

--- a/template.mustache/[s]tablas.mustache
+++ b/template.mustache/[s]tablas.mustache
@@ -1,3 +1,6 @@
+{{defaultConfig.defaultView}}
+<br />
+{{#items}}
 <strong>{{tableName}}</strong>: <br />
 <ul>
 {{#columns}}
@@ -11,3 +14,4 @@
 	</li>
 {{/columns}}
 </ul>
+{{/items}}
